# streamlit-sql

./: README.md  app.py  duckdb.db  pyproject.toml  rh.db  sql_duckdb.py  teste.db
