[tool.poetry]
name = "streamlit-sql"
version = "0.1.0"
description = ""
authors = ["Allan Ribeiro <ads_ribeiro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
streamlit-ace = "^0.1.1"
duckdb = "^0.10.0"
sqlalchemy = "^2.0.28"
openpyxl = "^3.1.2"
pandas = "^2.2.2"
fsspec = "^2024.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
